Fixed cut off words on summary page, and deleted keys

--- a/ASP/UP_EHR/Content/style.css
+++ b/ASP/UP_EHR/Content/style.css
@@ -268,7 +268,8 @@ a#left_menu {
     border: 0;
     box-shadow: none;
     color: black;
-    justify-content: space-around
+    justify-content: space-around;
+    width: 100%
 }
 
 #s_textbox {
